--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,3 +3,26 @@ chris:
   username: Chris
   email: chris@example.com
   password_digest: <%= User.digest('password') %>
+  admin: true
+
+archer:
+  username: Sterling
+  email: duchess@example.gov
+  password_digest: <%= User.digest('password') %>
+
+lana:
+  username: Lana
+  email: hands@example.gov
+  password_digest: <%= User.digest('password') %>
+
+mallory:
+  username: Mallory
+  email: boss@example.gov
+  password_digest: <%= User.digest('password') %>
+
+<% 30.times do |n| %>
+user_<%= n %>:
+  username:  <%= "User#{n}" %>
+  email: <%= "user-#{n}@example.com" %>
+  password_digest: <%= User.digest('password') %>
+<% end %>
